--- a/src-11ty/_includes/base_with_hero.html.njk
+++ b/src-11ty/_includes/base_with_hero.html.njk
@@ -5,6 +5,7 @@ layout: base.html.njk
 <style>
 .hero {
   display: block;
+  width: 100%;
   border-top-right-radius: var(--ha-card-border-radius, 4px);
   border-top-left-radius: var(--ha-card-border-radius, 4px);
 }
