--- a/src-11ty/_includes/base.html.njk
+++ b/src-11ty/_includes/base.html.njk
@@ -5,23 +5,30 @@
     <title>My Home Assistant</title>
     <link rel="icon" href="/images/favicon.png" type="image/png" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
-    <meta property="fb:app_id" content="338291289691179">
-    <meta property="og:title" content="Home Assistant">
-    <meta property="og:site_name" content="My Home Assistant">
-    <meta property="og:url" content="https://my.home-assistant.io/">
-    <meta property="og:type" content="website">
-    <meta property="og:description" content="The portal to your home.">
-    <meta property="og:image" content="https://my.home-assistant.io/images/favicon.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@home_assistant">
-    <meta name="twitter:title" content="My Home Assistant">
-    <meta name="twitter:description" content="The portal to your home.">
-    <meta name="twitter:image" content="https://my.home-assistant.io/images/favicon.png">
+    <meta property="fb:app_id" content="338291289691179" />
+    <meta property="og:title" content="Home Assistant" />
+    <meta property="og:site_name" content="My Home Assistant" />
+    <meta property="og:url" content="https://my.home-assistant.io/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="The portal to your home." />
+    <meta
+      property="og:image"
+      content="https://my.home-assistant.io/images/favicon.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@home_assistant" />
+    <meta name="twitter:title" content="My Home Assistant" />
+    <meta name="twitter:description" content="The portal to your home." />
+    <meta
+      name="twitter:image"
+      content="https://my.home-assistant.io/images/favicon.png"
+    />
     <style>
       html {
         font-size: 14px;
         height: 100vh;
       }
+
       body {
         font-family: Roboto, sans-serif;
         -moz-osx-font-smoothing: grayscale;
@@ -30,16 +37,28 @@
         height: 100%;
         margin: 0;
         padding: 0;
+        color: #212121;
         background-color: #e5e5e5;
         --mdc-theme-primary: #03a9f4;
         --mdc-theme-secondary: #03a9f4;
+      }
 
+      .layout {
         display: flex;
         min-height: 100%;
         align-items: center;
         justify-content: center;
         flex-direction: column;
       }
+
+      @media all and (max-width: 500px) {
+        .layout {
+          justify-content: flex-start;
+          min-height: 90%;
+          margin-bottom: 30px;
+        }
+      }
+
       a {
         color: var(--mdc-theme-primary);
       }
@@ -57,14 +76,6 @@
       }
       .footer a {
         color: var(--secondary-text-color);
-      }
-
-      @media all and (max-width: 500px) {
-        body {
-          justify-content: flex-start;
-          min-height: 90%;
-          margin-bottom: 30px;
-        }
       }
 
       .ha-card {
@@ -99,13 +110,9 @@
         display: block;
       }
 
-      .ha-card .card-content:not(:first-child) {
-        padding-top: 0px;
-        margin-top: -8px;
-      }
-
       .ha-card .card-content {
-        padding: 16px;
+        padding: 0 16px 16px;
+        margin-top: -8px;
       }
 
       .ha-card .card-content p:last-child {
@@ -121,17 +128,18 @@
     </style>
   </head>
   <body>
-    <div class='ha-card'>
-      {{ content | safe }}
-    </div>
-    <div class="footer">
-      <a href="/">My Home Assistant</a> –
-      <a href="/faq.html">FAQ</a> –
-      <a
-        href="https://github.com/home-assistant/my.home-assistant.io/issues"
-        target="_blank"
-        >Found a bug?</a
-      >
+    <div class="layout">
+      <div class="ha-card">
+        {{ content | safe }}
+      </div>
+      <div class="footer">
+        <a href="/">My Home Assistant</a> – <a href="/faq.html">FAQ</a> –
+        <a
+          href="https://github.com/home-assistant/my.home-assistant.io/issues"
+          target="_blank"
+          >Report a bug</a
+        >
+      </div>
     </div>
   </body>
 </html>
