Build per entrypoint

--- a/src-11ty/index.njk
+++ b/src-11ty/index.njk
@@ -39,4 +39,4 @@ layout: base_with_hero.html.njk
   </div>
 </my-index>
 
-<script type="module" src="/{{ manifest['my-index.js'] }}"></script>
+<script src="/js/{{ manifest['my-index.js'] }}"></script>
