Only change url on /

--- a/src-11ty/_includes/base.html.njk
+++ b/src-11ty/_includes/base.html.njk
@@ -125,6 +125,16 @@
         justify-content: space-between;
         align-items: center;
       }
+
+      .current-instance {
+        display: flex;
+        justify-content: space-between;
+        align-items: start;
+        min-height: 36px;
+      }
+      .current-instance a {
+        word-break: break-all;
+      }
     </style>
   </head>
   <body>
