--- a/src-11ty/index.njk
+++ b/src-11ty/index.njk
@@ -30,4 +30,4 @@ layout: base_with_hero.html.njk
   </div>
 </my-index>
 
-<script src="/js/{{ manifest['my-index.js'] }}"></script>
+<script defer src="/js/{{ manifest['my-index.js'] }}"></script>
