--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -135,16 +135,19 @@
       }
       .instance {
         padding: 0 16px 16px;
+        min-height: 43px;
         display: flex;
         justify-content: space-between;
       }
-      .instance div.secondary {
-        color: #727272;
+      .instance .info {
+        display: flex;
+        align-items: center;
       }
-      .error {
-        color: darkred;
+      .warning {
+        padding: 16px;
+        color: #db4437;
+        font-weight: bold;
       }
-
       button.empty {
         background: none;
         color: inherit;
@@ -153,6 +156,10 @@
         font: inherit;
         text-align: left;
         cursor: pointer;
+      }
+      button.empty:active,
+      button.empty:focus {
+        outline: none;
       }
     </style>
   </head>
