--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -53,10 +53,8 @@
       }
 
       @media all and (max-width: 500px) {
-        .layout {
-          justify-content: flex-start;
-          min-height: 90%;
-          margin-bottom: 30px;
+        .ha-card {
+          --ha-card-border-radius: 0;
         }
       }
 
@@ -100,13 +98,16 @@
         max-width: 500px;
       }
 
-      .ha-card h1.card-header {
-        margin: 0;
+      h1 {
         color: var(--ha-card-header-color, --primary-text-color);
         font-family: var(--ha-card-header-font-family, inherit);
         font-size: var(--ha-card-header-font-size, 24px);
         letter-spacing: -0.012em;
         line-height: 32px;
+      }
+
+      .ha-card h1.card-header {
+        margin: 0;
         padding: 24px 16px 16px;
         display: block;
       }
@@ -135,16 +136,19 @@
       }
       .instance {
         padding: 0 16px 16px;
+        min-height: 43px;
         display: flex;
         justify-content: space-between;
       }
-      .instance div.secondary {
-        color: #727272;
+      .instance .info {
+        display: flex;
+        align-items: center;
       }
-      .error {
-        color: darkred;
+      .warning {
+        padding: 16px;
+        color: #db4437;
+        font-weight: bold;
       }
-
       button.empty {
         background: none;
         color: inherit;
@@ -153,6 +157,10 @@
         font: inherit;
         text-align: left;
         cursor: pointer;
+      }
+      button.empty:active,
+      button.empty:focus {
+        outline: none;
       }
     </style>
   </head>
