--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -25,7 +25,8 @@
     />
     <style>
       html {
-        font-size: 14px;
+        font-size: 16px;
+        line-height: 1.5em;
         height: 100vh;
       }
 
@@ -104,6 +105,7 @@
         font-size: var(--ha-card-header-font-size, 24px);
         letter-spacing: -0.012em;
         line-height: 32px;
+        font-weight: 400;
       }
 
       .ha-card h1.card-header {
@@ -144,8 +146,7 @@
         display: flex;
         align-items: center;
       }
-      .warning {
-        padding: 16px;
+      .error {
         color: #db4437;
         font-weight: bold;
       }
