Add a link to create link

--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -69,7 +69,7 @@
 
       .footer {
         text-align: center;
-        font-size: 12px;
+        font-size: 14px;
         padding: 8px 0 24px;
         color: var(--secondary-text-color);
       }
@@ -168,11 +168,12 @@
     <div class="layout">
       <div class="ha-card">{{ content | safe }}</div>
       <div class="footer">
-        <a href="/">My Home Assistant</a> – <a href="/faq.html">FAQ</a> –
+        <a href="/">Home</a> – <a href="/create-link.html">Share link</a> –
+        <a href="/faq.html">FAQ</a> –
         <a
           href="https://github.com/home-assistant/my.home-assistant.io/issues"
           target="_blank"
-          >Report a bug</a
+          >Report bug</a
         >
       </div>
     </div>
