FIx layout to the top to prevent jumps

--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -49,7 +49,6 @@
         display: flex;
         min-height: 100%;
         align-items: center;
-        justify-content: center;
         flex-direction: column;
       }
 
@@ -95,6 +94,7 @@
         transition: all 0.3s ease-out;
         position: relative;
 
+        margin-top: 20px;
         width: 100%;
         max-width: 500px;
       }
