Alert for not supported browsers (#19)

--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -165,6 +165,24 @@
         outline: none;
       }
     </style>
+    <script>
+      function check() {
+        "use strict";
+        try {
+          eval("async () => {}");
+          eval("function f(e) { for (let e in {}) e }");
+        } catch (e) {
+          return false;
+        }
+        return true;
+      }
+      supported = check();
+      if (!supported) {
+        alert(
+          "We are sorry, but this browser is not supported. We advise you to upgrade your browser."
+        );
+      }
+    </script>
   </head>
   <body>
     <div class="layout">
