Update instance info

--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -131,27 +131,24 @@
         align-items: center;
       }
 
+      .instance-info {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 16px 16px;
+        align-items: center;
+      }
       .instance-header {
         font-weight: 600;
         letter-spacing: 0.05em;
         font-size: 12px;
-        padding-left: 16px;
-      }
-      .instance {
-        padding: 0 16px 16px;
-        min-height: 43px;
-        display: flex;
-        justify-content: space-between;
-      }
-      .instance .info {
-        display: flex;
-        align-items: center;
+        line-height: 1em;
       }
       .error {
         color: #db4437;
         font-weight: bold;
       }
       button.empty {
+        display: inline-flex;
         background: none;
         color: inherit;
         border: none;
