--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -52,6 +52,10 @@
         flex-direction: column;
       }
 
+      .spacer {
+        flex: 1;
+      }
+
       a {
         color: var(--mdc-theme-primary);
       }
@@ -184,8 +188,10 @@
   <body>
     <div class="layout">
       <div class="ha-card">{{ content | safe }}</div>
+      <div class="spacer"></div>
       <div class="footer">
-        <a href="/">Home</a> – <a href="/create-link.html">Share link</a> –
+        <a href="/">My Home Assistant</a> –
+        <a href="/create-link.html">Share link</a> –
         <a href="/faq.html">FAQ</a> –
         <a
           href="https://github.com/home-assistant/my.home-assistant.io/issues"
