--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -52,6 +52,10 @@
         flex-direction: column;
       }
 
+      .spacer {
+        flex: 1;
+      }
+
       a {
         color: var(--mdc-theme-primary);
       }
@@ -130,40 +134,6 @@
         justify-content: space-between;
         align-items: center;
       }
-
-      .instance-header {
-        font-weight: 600;
-        letter-spacing: 0.05em;
-        font-size: 12px;
-        padding-left: 16px;
-      }
-      .instance {
-        padding: 0 16px 16px;
-        min-height: 43px;
-        display: flex;
-        justify-content: space-between;
-      }
-      .instance .info {
-        display: flex;
-        align-items: center;
-      }
-      .error {
-        color: #db4437;
-        font-weight: bold;
-      }
-      button.empty {
-        background: none;
-        color: inherit;
-        border: none;
-        padding: 0;
-        font: inherit;
-        text-align: left;
-        cursor: pointer;
-      }
-      button.empty:active,
-      button.empty:focus {
-        outline: none;
-      }
     </style>
     <script>
       function check() {
@@ -187,8 +157,10 @@
   <body>
     <div class="layout">
       <div class="ha-card">{{ content | safe }}</div>
+      <div class="spacer"></div>
       <div class="footer">
-        <a href="/">Home</a> – <a href="/create-link.html">Share link</a> –
+        <a href="/">My Home Assistant</a> –
+        <a href="/create-link.html">Share link</a> –
         <a href="/faq.html">FAQ</a> –
         <a
           href="https://github.com/home-assistant/my.home-assistant.io/issues"
