Clean up templating a bit

--- a/src-11ty/_includes/base_card_with_hero.html
+++ b/src-11ty/_includes/base_card_with_hero.html
@@ -17,8 +17,10 @@ layout: base
   }
 </style>
 
-<div class="hero">
-  <img src="/images/header.jpg" alt="Decorative header" />
-</div>
+<div class="ha-card">
+  <div class="hero">
+    <img src="/images/header.jpg" alt="Decorative header" />
+  </div>
 
-{{ content | safe }}
+  {{ content | safe }}
+</div>
