--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -173,7 +173,7 @@ My Home Assistant
   </head>
   <body>
     <div class="layout">
-      <div class="ha-card">{{ content | safe }}</div>
+      {{ content | safe }}
       <div class="spacer"></div>
       <div class="footer">
         <a href="/">My Home Assistant</a> –
