Fix social link

--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -30,7 +30,7 @@ My Home Assistant
     <meta property="og:description" content="{{ description }}" />
     <meta
       property="og:image"
-      content="https://my.home-assistant.io/images/social.jpg"
+      content="https://my.home-assistant.io/images/social.png"
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@home_assistant" />
@@ -38,7 +38,7 @@ My Home Assistant
     <meta name="twitter:description" content="{{ description }}" />
     <meta
       name="twitter:image"
-      content="https://my.home-assistant.io/images/social.jpg"
+      content="https://my.home-assistant.io/images/social.png"
     />
     <style>
       html {
