--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -25,6 +25,10 @@ My Home Assistant
     <meta property="fb:app_id" content="338291289691179" />
     <meta property="og:title" content="Home Assistant" />
     <meta property="og:site_name" content="My Home Assistant" />
+    <meta
+      property="og:url"
+      content="https://my.home-assistant.io{{ page.url }}"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="{{ description }}" />
     <meta
@@ -185,8 +189,7 @@ My Home Assistant
       <div class="spacer"></div>
       <div class="footer">
         <a href="/">My Home Assistant</a> –
-        <a href="/create-link.html">Share link</a> –
-        <a href="/faq.html">FAQ</a> –
+        <a href="/create-link/">Share link</a> – <a href="/faq/">FAQ</a> –
         <a
           href="https://github.com/home-assistant/my.home-assistant.io/issues"
           target="_blank"
