--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -21,7 +21,7 @@ My Home Assistant
     <meta charset="utf-8" />
     <title>{{ full_title }}</title>
     <link rel="icon" href="/images/favicon.png" type="image/png" />
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta name="viewport" content="width=device-width" />
     <meta property="fb:app_id" content="338291289691179" />
     <meta property="og:title" content="{{ full_title }}" />
     <meta property="og:site_name" content="My Home Assistant" />
