--- a/src-11ty/_includes/base_card_with_hero.html
+++ b/src-11ty/_includes/base_card_with_hero.html
@@ -4,7 +4,7 @@ layout: base
 
 <style>
   .hero {
-    padding-top: 63%;
+    padding-top: 18.56%;
     position: relative;
   }
   .hero img {
@@ -15,11 +15,14 @@ layout: base
     border-top-right-radius: var(--ha-card-border-radius, 4px);
     border-top-left-radius: var(--ha-card-border-radius, 4px);
   }
+  .hero + style + .card-content {
+    padding-top: 16px;
+  }
 </style>
 
 <div class="ha-card">
   <div class="hero">
-    <img src="/images/header.jpg" alt="Decorative header" />
+    <img src="/images/header.png" alt="My Home Assistant logo." />
   </div>
 
   {{ content | safe }}
