Fix Safari footer

--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -163,6 +163,11 @@ My Home Assistant
       .highlight + .card-content {
         margin-top: 16px;
       }
+      _::-webkit-full-page-media,
+      _:future,
+      :root .footer {
+        padding-bottom: 120px;
+      }
     </style>
     <script>
       function check() {
