Fix production var name

--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -202,7 +202,7 @@ My Home Assistant
         >
       </div>
     </div>
-    {% if javascript_source %}{% if production %}
+    {% if javascript_source %}{% if is_production %}
     <script>
       {% comment %}
       <!-- prettier-ignore -->
