--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -168,6 +168,13 @@ My Home Assistant
       :root .footer {
         padding-bottom: 120px;
       }
+      @font-face {
+        font-family: "Roboto";
+        src: local("Roboto Regular"), local("Roboto-Regular"),
+          url(/fonts/roboto/Roboto-Regular.woff2) format("woff2");
+        font-weight: 400;
+        font-style: normal;
+      }
     </style>
     <script>
       function check() {
