Only run on mobile browsers

--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -191,6 +191,7 @@ My Home Assistant
         );
       }
       if (
+        window.orientation !== undefined &&
         !CSS.supports("min-height: stretch") &&
         !CSS.supports("-webkit-hyphens")
       ) {
