Fix lighthouse complaints

--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -16,11 +16,12 @@ My Home Assistant
 <!-- prettier-unignore -->
 {% endcomment %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>{{ full_title }}</title>
     <link rel="icon" href="/images/favicon.png" type="image/png" />
+    <meta name="description" content="{{ description }}" />
     <meta name="viewport" content="width=device-width" />
     <meta property="fb:app_id" content="338291289691179" />
     <meta property="og:title" content="{{ full_title }}" />
