Noopener create bug

--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -225,6 +225,7 @@ My Home Assistant
         <a
           href="https://github.com/home-assistant/my.home-assistant.io/issues"
           target="_blank"
+          rel="noopener"
           >Report bug</a
         >
       </div>
