Change link color

--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -61,6 +61,7 @@ My Home Assistant
         --mdc-theme-primary: #03a9f4;
         --mdc-theme-secondary: #03a9f4;
         --primary-text-color: #212121;
+        --link-text-color: #0277bd;
         color: var(--primary-text-color);
       }
 
@@ -85,7 +86,7 @@ My Home Assistant
       }
 
       a {
-        color: var(--mdc-theme-primary);
+        color: var(--link-text-color);
       }
 
       .footer {
