--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -173,6 +173,7 @@ My Home Assistant
           url(/fonts/roboto/Roboto-Regular.woff2) format("woff2");
         font-weight: 400;
         font-style: normal;
+        font-display: swap;
       }
     </style>
     <script>
