--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -23,6 +23,17 @@ My Home Assistant
     <link rel="icon" href="/images/favicon.png" type="image/png" />
     <meta name="description" content="{{ description }}" />
     <meta name="viewport" content="width=device-width" />
+    {%- if redirect -%}
+    <meta property="al:android:url" content="homeassistant://my_redirect" />
+    <meta
+      property="al:android:package"
+      content="io.homeassistant.companion.android"
+    />
+    <meta property="al:android:app_name" content="Home Assistant" />
+    <meta property="al:ios:url" content="homeassistant://my_redirect" />
+    <meta property="al:ios:app_store_id" content="1099568401" />
+    <meta property="al:ios:app_name" content="Home Assistant" />
+    {%- endif -%}
     <meta property="fb:app_id" content="338291289691179" />
     <meta property="og:title" content="{{ full_title }}" />
     <meta property="og:site_name" content="My Home Assistant" />
