--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -33,8 +33,8 @@ My Home Assistant
     <meta property="al:ios:url" content="homeassistant://my_redirect" />
     <meta property="al:ios:app_store_id" content="1099568401" />
     <meta property="al:ios:app_name" content="Home Assistant" />
+    <meta property="al:web:should_fallback" content="false" />
     {%- endif -%}
-    <meta property="fb:app_id" content="338291289691179" />
     <meta property="og:title" content="{{ full_title }}" />
     <meta property="og:site_name" content="My Home Assistant" />
     <meta
