--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -24,7 +24,7 @@ My Home Assistant
     <meta name="description" content="{{ description }}" />
     <meta name="viewport" content="width=device-width" />
     {%- if redirect -%}
-    <meta property="al:android:url" content="homeassistant://config/cloud" />
+    <meta property="al:android:url" content="homeassistant://my_redirect" />
     <meta
       property="al:android:package"
       content="io.homeassistant.companion.android"
