--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -33,7 +33,7 @@ My Home Assistant
     <meta property="al:ios:url" content="homeassistant://my_redirect" />
     <meta property="al:ios:app_store_id" content="1099568401" />
     <meta property="al:ios:app_name" content="Home Assistant" />
-    <meta property="al:web:should_fallback" content="false" />
+    <meta property="al:web:should_fallback" content="true" />
     {%- endif -%}
     <meta property="og:title" content="{{ full_title }}" />
     <meta property="og:site_name" content="My Home Assistant" />
