--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -218,7 +218,7 @@ My Home Assistant
   </head>
   <body>
     <div class="layout">
-      {{ content | safe }}
+      {{ content }}
       <div class="spacer"></div>
       <div class="footer">
         <a href="/">My Home Assistant</a> –
