--- a/src-11ty/_includes/base_card_with_hero.html
+++ b/src-11ty/_includes/base_card_with_hero.html
@@ -4,16 +4,14 @@ layout: base
 
 <style>
   .hero {
-    padding-top: 63%;
-    position: relative;
-  }
-  .hero img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
+    height: 300px;
     border-top-right-radius: var(--ha-card-border-radius, 4px);
     border-top-left-radius: var(--ha-card-border-radius, 4px);
+  }
+  .hero img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 </style>
 
