--- a/src-11ty/_includes/base_card_with_hero.html
+++ b/src-11ty/_includes/base_card_with_hero.html
@@ -4,9 +4,10 @@ layout: base
 
 <style>
   .hero {
-    height: 300px;
-    border-top-right-radius: var(--ha-card-border-radius, 4px);
-    border-top-left-radius: var(--ha-card-border-radius, 4px);
+    height: 25vh;
+    border-top-right-radius: var(--ha-card-border-radius);
+    border-top-left-radius: var(--ha-card-border-radius);
+    overflow: hidden;
   }
   .hero img {
     width: 100%;
