--- a/src-11ty/_includes/base.html
+++ b/src-11ty/_includes/base.html
@@ -47,6 +47,7 @@ My Home Assistant
       html {
         font-size: 16px;
         line-height: 1.5em;
+        --ha-card-border-radius: 12px;
       }
 
       body {
@@ -56,7 +57,7 @@ My Home Assistant
         font-weight: 400;
         margin: 0;
         padding: 0;
-        background-color: #e5e5e5;
+        background-color: #fafafa;
         --mdc-theme-primary: #03a9f4;
         --mdc-theme-secondary: #03a9f4;
         --primary-text-color: #212121;
@@ -103,13 +104,8 @@ My Home Assistant
           --ha-card-background,
           var(--paper-card-background-color, white)
         );
-        border-radius: var(--ha-card-border-radius, 4px);
-        box-shadow: var(
-          --ha-card-box-shadow,
-          0 2px 2px 0 rgba(0, 0, 0, 0.14),
-          0 1px 5px 0 rgba(0, 0, 0, 0.12),
-          0 3px 1px -2px rgba(0, 0, 0, 0.2)
-        );
+        border-radius: var(--ha-card-border-radius);
+        border: 1px solid rgba(0, 0, 0, .12);
         color: var(--primary-text-color);
         display: block;
         transition: all 0.3s ease-out;
